misc, move BlockStatePredicate class for ProbeJS compat